Edited another tme README

--- a/README
+++ b/README
@@ -21,6 +21,6 @@ added halation
 added fade effect
 added light leaks
 
-Other can be added (e.g. holga, square/diana mini, perforations, tilt shift, start/end roll, dying sensor, etc.)
+Other can be added (e.g. holga, square/diana mini, perforations, tilt shift, start/end roll, dying sensor, cross process, etc.)
 
 a film strip and/or contact sheet will be generated (to be selected)
