GameBoyCamera stype added to README

--- a/README
+++ b/README
@@ -20,6 +20,7 @@ added grain
 added halation
 added fade effect
 added light leaks
+GameBoy Camera effect simulation
 
 Other can be added (e.g. holga, square/diana mini, perforations, tilt shift, start/end roll, dying sensor, cross process, etc.)
 
